之前一直不抛出异常是struts2.3.20的Bug，改回2.3.16.3版本后正常了

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,7 @@ encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/main/resources/config.properties=UTF-8
 encoding//src/main/resources/hibernate.properties=UTF-8
+encoding//src/main/resources/log4j.properties=UTF-8
 encoding//src/main/resources/struts.properties=UTF-8
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
