--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,10 @@
 		<aspectj.version>1.6.10</aspectj.version>
 		<spring.version>4.1.4.RELEASE</spring.version>
 		<hibernate.version>4.3.8.Final</hibernate.version>
-		<struts2.version>2.3.16</struts2.version>
+		<struts2.version>2.3.20</struts2.version>
 		<mysql.connector.version>5.1.34</mysql.connector.version>
 		<druid.version>1.0.12</druid.version>
+		<jstl.version>1.2</jstl.version>
 	</properties>
 	<!-- 依赖配置 -->
 	<dependencies>
@@ -28,30 +29,30 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-		
-		
+
+
 		<!-- Servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>${servlet.version}</version>
 		</dependency>
-		
-		
+
+
 		<!-- mysql数据驱动 -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql.connector.version}</version>
 		</dependency>
-		
+
 		<!-- log4j -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-		
+
 		<!-- aspectj相关jar包 -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -63,8 +64,8 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>${aspectj.version}</version>
 		</dependency>
-		
-		
+
+
 		<!-- spring4 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -101,7 +102,7 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<!-- struts2 -->
 		<dependency>
 			<groupId>org.apache.struts</groupId>
@@ -114,34 +115,42 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-spring-plugin</artifactId>
 			<version>${struts2.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-convention-plugin</artifactId>
 			<version>${struts2.version}</version>
 		</dependency>
-		
-		
+
+
 		<!-- hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>${hibernate.version}</version>
 		</dependency>
-		
-		
+
+
 		<!-- druid -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
 			<version>${druid.version}</version>
 		</dependency>
+
+		<!-- 引入jstl标签库 -->
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>${jstl.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
