druid访问登陆配置

--- a/src/main/resources/struts.properties
+++ b/src/main/resources/struts.properties
@@ -1,7 +1,7 @@
 #允许动态调用
 #struts.enable.DynamicMethodInvocation=true
 #指定不经过struts2框架处理的URL规则
-struts.action.excludePattern=/servlet/*.*
+struts.action.excludePattern=/servlet/*.*,/druid/*.*
 #设置扩展名
 struts.action.extension=action,do
 #设置修改配置文件不用重新启动
