hibernate one-to-one 应用模板

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -26,9 +26,9 @@ log4j.appender.fileout.layout.ConversionPattern=%d %-5p [%c] %m%n
 
 #rootCategory的logger是缺省的logger，记录所有的包的信息输出
 #下面的意思是————rootCategory 把所有类的INFO级别以上的信息输出到stdout和fileout两个appender中
-log4j.rootCategory=INFO, stdout, fileout
+log4j.rootCategory=WARN, stdout, fileout
 #下面的logger是只输出指定包com.wolfsquare.log2下的日志信息，意思是————把com.wolfsquare.log2包中的所有类（包括子包）DEBUG级别（含）以上的信息输出到stdout 中
-log4j.logger.com.wolfsquare.log2=DEBUG,stdout
+log4j.logger.com.wolfsquare.log2=WARN,stdout
 
 
 
