--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -53,8 +53,8 @@ log4j.logger.org.hibernate.cache=debug
 #log4j.logger.org.hibernate.sql.ordering.antlr=debug
 
 #使用该配置，能在使用struts2.3.20的时候控制台输出异常，之前使用Warn控制台没输出，原因暂时先留着，以后再找
-log4j.logger.com.opensymphony.xwork2=DEBUG
-log4j.org.apache.struts2=DEBUG
+log4j.logger.com.opensymphony.xwork2=WARN
+log4j.org.apache.struts2=WARN
 
 #Log4j提供的appender有以下几种：
 #org.apache.log4j.ConsoleAppender（控制台）
